--- a/tests_data/tests/utils/initappconf/config.yml
+++ b/tests_data/tests/utils/initappconf/config.yml
@@ -36,11 +36,13 @@ general:
       level: DEBUG
       handlers: [all_file_handler]
 app:
-  inner_host_name: google.com
-  cli_template: ping {{app.inner_host_name}}
+  host_name: google.com
+  news: cnn.com
   white_list:
-    - one
-    - two
-    - three
-
+    - gamma
+    - alpha
+    - betha
+  alt_white_list:
+    - 100
+    - 10.0
 
