--- a/requirements-fabric.txt
+++ b/requirements-fabric.txt
@@ -1,10 +1,9 @@
-asn1crypto==0.24.0
-bcrypt==3.1.6
-cffi==1.11.5
-cryptography==2.6.1
+bcrypt==3.2.0
+cffi==1.14.3
+cryptography==3.1.1
 fabric==2.5.0
 invoke==1.4.1
-paramiko==2.7.1
-pycparser==2.19
-pynacl==1.3.0
-six==1.12.0
+paramiko==2.7.2
+pycparser==2.20
+PyNaCl==1.3.0
+six==1.15.0
