--- a/requirements-tests.txt
+++ b/requirements-tests.txt
@@ -1,13 +1,12 @@
-atomicwrites==1.3.0
-attrs==19.1.0
-colorama==0.4.1
-mock==2.0.0
-more-itertools==6.0.0
-pbr==5.1.3
-pluggy==0.9.0
-py==1.8.0
-pytest==4.3.1
-pytest-assume==1.2.2
-pytest-mock==1.10.1
+attrs==20.2.0
+mock==4.0.2
+py==1.9.0
+pytest==6.1.2
+pytest-assume==2.3.3
+pytest-mock==3.3.1
 PyYAML==5.1
-six==1.12.0
+toml==0.10.2
+pluggy==0.13.1
+packaging==20.4
+iniconfig==1.1.1
+pyparsing==2.4.7
