--- a/requirements.in
+++ b/requirements.in
@@ -1,1 +1,13 @@
 pyyaml==6.0.1
+python-dotenv>=1.0.0
+fabric>=2.5.0
+multidispatch>=0.2
+pip-tools>=7.3.0
+PyYAML==6.0.1
+pytest==7.4.3
+pytest-asyncio==0.21.1
+pytest-assume==2.3.3
+pytest-mock==3.12.0
+HiYaPyCo>=0.4.16
+Jinja2>1
+pyOpenSSL[cryptography]
